[project]
name = "whats-the-time"
version = "1.0.0"
dynamic = ["description"]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
whats-the-time = "whats_the_time:main"

[tool.hatch.build.targets.wheel]
only-include = ["whats_the_time.py"]

[tool.hatch.metadata.hooks.custom]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
